# vulnerable-banana-sensei-gemini-hackathon-2026

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend-engine/: Dockerfile  pyproject.toml
backend-engine/scripts/: test_gemini.py
backend-engine/src/vulnerable_banana/: __init__.py  config.py  errors.py  logging.py  main.py
backend-engine/src/vulnerable_banana/api/: dependencies.py  routes.py
backend-engine/src/vulnerable_banana/models/: __init__.py  base.py  comics.py  packages.py  stories.py  vulnerabilities.py
backend-engine/src/vulnerable_banana/services/: __init__.py  comic.py  osv.py  parser.py  researcher.py  storyboard.py
backend-engine/src/vulnerable_banana/storage/: __init__.py  base.py  gcs.py  local.py
frontend-ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend-ui/src/: App.tsx  index.css  main.tsx
frontend-ui/src/components/: ComicGenerationLoading.tsx  ComicViewer.tsx  StoryCard.tsx  UploadZone.tsx  index.ts
frontend-ui/src/types/: api.ts
test-fixtures/: clean-package.json  large-package.json  vulnerable-package.json
